src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void StereoBM_Delete(void* self);
extern "C" __declspec(dllexport) int StereoBM_getPreFilterType_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setPreFilterType_0(void* self, int preFilterType);
extern "C" __declspec(dllexport) int StereoBM_getPreFilterSize_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setPreFilterSize_0(void* self, int preFilterSize);
extern "C" __declspec(dllexport) int StereoBM_getPreFilterCap_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setPreFilterCap_0(void* self, int preFilterCap);
extern "C" __declspec(dllexport) int StereoBM_getTextureThreshold_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setTextureThreshold_0(void* self, int textureThreshold);
extern "C" __declspec(dllexport) int StereoBM_getUniquenessRatio_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setUniquenessRatio_0(void* self, int uniquenessRatio);
extern "C" __declspec(dllexport) int StereoBM_getSmallerBlockSize_0(void* self);
extern "C" __declspec(dllexport) void StereoBM_setSmallerBlockSize_0(void* self, int blockSize);
extern "C" __declspec(dllexport) void StereoBM_getROI1_0(void* self, cv::Rect* outVal);
extern "C" __declspec(dllexport) void StereoBM_setROI1_0(void* self, cv::Rect roi1);
extern "C" __declspec(dllexport) void StereoBM_getROI2_0(void* self, cv::Rect* outVal);
extern "C" __declspec(dllexport) void StereoBM_setROI2_0(void* self, cv::Rect roi2);
extern "C" __declspec(dllexport) void* StereoBM_create_0(int numDisparities, int blockSize);
extern "C" __declspec(dllexport) void StereoMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_compute_0(void* self, void* left, void* right, void* disparity);
extern "C" __declspec(dllexport) int StereoMatcher_getMinDisparity_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setMinDisparity_0(void* self, int minDisparity);
extern "C" __declspec(dllexport) int StereoMatcher_getNumDisparities_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setNumDisparities_0(void* self, int numDisparities);
extern "C" __declspec(dllexport) int StereoMatcher_getBlockSize_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setBlockSize_0(void* self, int blockSize);
extern "C" __declspec(dllexport) int StereoMatcher_getSpeckleWindowSize_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setSpeckleWindowSize_0(void* self, int speckleWindowSize);
extern "C" __declspec(dllexport) int StereoMatcher_getSpeckleRange_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setSpeckleRange_0(void* self, int speckleRange);
extern "C" __declspec(dllexport) int StereoMatcher_getDisp12MaxDiff_0(void* self);
extern "C" __declspec(dllexport) void StereoMatcher_setDisp12MaxDiff_0(void* self, int disp12MaxDiff);
extern "C" __declspec(dllexport) void StereoSGBM_Delete(void* self);
extern "C" __declspec(dllexport) int StereoSGBM_getPreFilterCap_0(void* self);
extern "C" __declspec(dllexport) void StereoSGBM_setPreFilterCap_0(void* self, int preFilterCap);
extern "C" __declspec(dllexport) int StereoSGBM_getUniquenessRatio_0(void* self);
extern "C" __declspec(dllexport) void StereoSGBM_setUniquenessRatio_0(void* self, int uniquenessRatio);
extern "C" __declspec(dllexport) int StereoSGBM_getP1_0(void* self);
extern "C" __declspec(dllexport) void StereoSGBM_setP1_0(void* self, int P1);
extern "C" __declspec(dllexport) int StereoSGBM_getP2_0(void* self);
extern "C" __declspec(dllexport) void StereoSGBM_setP2_0(void* self, int P2);
extern "C" __declspec(dllexport) int StereoSGBM_getMode_0(void* self);
extern "C" __declspec(dllexport) void StereoSGBM_setMode_0(void* self, int mode);
extern "C" __declspec(dllexport) void* StereoSGBM_create_0(int minDisparity, int numDisparities, int blockSize, int P1, int P2, int disp12MaxDiff, int preFilterCap, int uniquenessRatio, int speckleWindowSize, int speckleRange, int mode);
extern "C" __declspec(dllexport) void cv_stereoRectify_0(void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, cv::Size imageSize, void* R, void* T, void* R1, void* R2, void* P1, void* P2, void* Q, int flags, double alpha, cv::Size newImageSize, void* validPixROI1, void* validPixROI2);
extern "C" __declspec(dllexport) bool cv_stereoRectifyUncalibrated_0(void* points1, void* points2, void* F, cv::Size imgSize, void* H1, void* H2, double threshold);
extern "C" __declspec(dllexport) void cv_fisheye_stereoRectify_0(void* K1, void* D1, void* K2, void* D2, cv::Size imageSize, void* R, void* tvec, void* R1, void* R2, void* P1, void* P2, void* Q, int flags, cv::Size newImageSize, double balance, double fov_scale);
extern "C" __declspec(dllexport) void cv_filterSpeckles_0(void* img, double newVal, int maxSpeckleSize, double maxDiff, void* buf);
extern "C" __declspec(dllexport) cv::Rect cv_getValidDisparityROI_0(cv::Rect roi1, cv::Rect roi2, int minDisparity, int numberOfDisparities, int blockSize);
extern "C" __declspec(dllexport) void cv_validateDisparity_0(void* disparity, void* cost, int minDisparity, int numberOfDisparities, int disp12MaxDisp);
extern "C" __declspec(dllexport) void cv_reprojectImageTo3D_0(void* disparity, void* _3dImage, void* Q, bool handleMissingValues, int ddepth);