src/OpenCV5Sharp/Generated/NativeMethods.Stereo.cs

// Copyright (c) 2026 Qourex. Licensed under Apache-2.0.
// See LICENSE file in the project root for full license information.
// AUTO-GENERATED FILE — DO NOT EDIT MANUALLY. Generated by generator.py.

using System;
using System.Runtime.InteropServices;

namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getPreFilterType_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setPreFilterType_0(StereoBMHandle self, int preFilterType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getPreFilterSize_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setPreFilterSize_0(StereoBMHandle self, int preFilterSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getPreFilterCap_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setPreFilterCap_0(StereoBMHandle self, int preFilterCap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getTextureThreshold_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setTextureThreshold_0(StereoBMHandle self, int textureThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getUniquenessRatio_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setUniquenessRatio_0(StereoBMHandle self, int uniquenessRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoBM_getSmallerBlockSize_0(StereoBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setSmallerBlockSize_0(StereoBMHandle self, int blockSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_getROI1_0(StereoBMHandle self, out Rect retVal);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setROI1_0(StereoBMHandle self, Rect roi1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_getROI2_0(StereoBMHandle self, out Rect retVal);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoBM_setROI2_0(StereoBMHandle self, Rect roi2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr StereoBM_create_0(int numDisparities, int blockSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_compute_0(StereoMatcherHandle self, MatHandle left, MatHandle right, MatHandle disparity);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getMinDisparity_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setMinDisparity_0(StereoMatcherHandle self, int minDisparity);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getNumDisparities_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setNumDisparities_0(StereoMatcherHandle self, int numDisparities);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getBlockSize_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setBlockSize_0(StereoMatcherHandle self, int blockSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getSpeckleWindowSize_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setSpeckleWindowSize_0(StereoMatcherHandle self, int speckleWindowSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getSpeckleRange_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setSpeckleRange_0(StereoMatcherHandle self, int speckleRange);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoMatcher_getDisp12MaxDiff_0(StereoMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoMatcher_setDisp12MaxDiff_0(StereoMatcherHandle self, int disp12MaxDiff);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoSGBM_getPreFilterCap_0(StereoSGBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_setPreFilterCap_0(StereoSGBMHandle self, int preFilterCap);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoSGBM_getUniquenessRatio_0(StereoSGBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_setUniquenessRatio_0(StereoSGBMHandle self, int uniquenessRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoSGBM_getP1_0(StereoSGBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_setP1_0(StereoSGBMHandle self, int P1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoSGBM_getP2_0(StereoSGBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_setP2_0(StereoSGBMHandle self, int P2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int StereoSGBM_getMode_0(StereoSGBMHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void StereoSGBM_setMode_0(StereoSGBMHandle self, int mode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr StereoSGBM_create_0(int minDisparity, int numDisparities, int blockSize, int P1, int P2, int disp12MaxDiff, int preFilterCap, int uniquenessRatio, int speckleWindowSize, int speckleRange, int mode);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_stereoRectify_0(MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, Size imageSize, MatHandle R, MatHandle T, MatHandle R1, MatHandle R2, MatHandle P1, MatHandle P2, MatHandle Q, int flags, double alpha, Size newImageSize, IntPtr validPixROI1, IntPtr validPixROI2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_stereoRectifyUncalibrated_0(MatHandle points1, MatHandle points2, MatHandle F, Size imgSize, MatHandle H1, MatHandle H2, double threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fisheye_stereoRectify_0(MatHandle K1, MatHandle D1, MatHandle K2, MatHandle D2, Size imageSize, MatHandle R, MatHandle tvec, MatHandle R1, MatHandle R2, MatHandle P1, MatHandle P2, MatHandle Q, int flags, Size newImageSize, double balance, double fov_scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_filterSpeckles_0(MatHandle img, double newVal, int maxSpeckleSize, double maxDiff, IntPtr buf);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_getValidDisparityROI_0(Rect roi1, Rect roi2, int minDisparity, int numberOfDisparities, int blockSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_validateDisparity_0(MatHandle disparity, MatHandle cost, int minDisparity, int numberOfDisparities, int disp12MaxDisp);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_reprojectImageTo3D_0(MatHandle disparity, MatHandle _3dImage, MatHandle Q, [MarshalAs(UnmanagedType.U1)] bool handleMissingValues, int ddepth);
    }
}
